--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "portfoliomaker-backend",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongodb": "^3.6.6",
-    "mongoose": "^5.12.4"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^6.12.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.4.5",
+    "nodemon": "^3.0.1"
   }
 }
